deal the problemof fitting the photo ,thesetting of menu and the mode of night

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CoordinatorLayout</string>
+    <string name="title_night_mode">夜间模式</string>
 </resources>
